--- a/SpringWeb/Mobilele/build.gradle
+++ b/SpringWeb/Mobilele/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+// https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
+	implementation 'org.springframework.security:spring-security-crypto:5.7.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
