--- a/SpringWeb/Mobilele/build.gradle
+++ b/SpringWeb/Mobilele/build.gradle
@@ -15,6 +15,8 @@ repositories {
 dependencies {
 // https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
 	implementation 'org.springframework.security:spring-security-crypto:5.7.1'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
