--- a/SpringWeb/pathfinder/src/main/resources/application.yml
+++ b/SpringWeb/pathfinder/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: "jdbc:mysql://localhost:3306/pathfinder?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
-    username: root
-    password: toor
+    username: stili
+    password: stili
   servlet:
     multipart:
       max-file-size: 1MB
