--- a/SpringWeb/Mobilele/build.gradle
+++ b/SpringWeb/Mobilele/build.gradle
@@ -17,6 +17,9 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-crypto:5.7.1'
 // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.0'
+// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+	implementation 'org.modelmapper:modelmapper:3.1.0'
+
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
