--- a/SpringWeb/Mobilele/src/main/resources/application.properties
+++ b/SpringWeb/Mobilele/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #Data Source Properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mobilele?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true
-spring.datasource.username=stili
+spring.datasource.username=root
+spring.datasource.password=S3cret
 #JPA Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
