--- a/SpringWeb/Mobilele/src/main/resources/application.properties
+++ b/SpringWeb/Mobilele/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.hibernate.ddl-auto=update
 #Show SQL executed with parameter bindings
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor=TRACE
+
+spring.sql.init.mode=never
+
